# excel-ingester-db-loader

./: .env.example  .gitignore  LICENSE  README.md  app.py  db.py  ingest.py  outlook.py  pyproject.toml  router.py  servicenow.py  sync_snapshot.py  table_config.json
tests/: conftest.py  manual_test_servicenow_connection.py  test_app.py  test_db.py  test_ingest.py  test_outlook.py  test_router.py  test_servicenow.py
