[project]
name = "excel-ingester-db-loader"
version = "1.0.0"
description = "Simple Streamlit app for loading Excel spreadsheets into SQLite"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
