[project]
name = "excel-ingester-db-loader"
version = "1.0.0"
description = "Simple Streamlit app for loading Excel spreadsheets into SQLite"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "requests>=2.31",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
outlook = [
    "pywin32>=306",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# .streamlit/config.toml
[server]
port = 8502
